--- a/xiangqin/index.html
+++ b/xiangqin/index.html
@@ -20,7 +20,7 @@
 <div id="button" class="row">
     <div class="row copy">
         <img src="img/qq.png">
-        <p style="   margin-left: 0.05rem;">加入QQ群：<span id="target">31133655</span></p>
+        <p style="   margin-left: 0.05rem;">加入QQ群：<span id="target">333655</span></p>
     </div>
     <div class="btn" data-clipboard-action="copy" data-clipboard-target="#target" id="copy_btn">
         点击复制
